# MicMix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVPLAN.md  README.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  VST_HOST_PLAN.md
.github/workflows/: ci.yml  release-on-tag.yml
cmake/: version.h.in
resources/: micmix.rc
scripts/: package_ts3_plugin.ps1
src/: effects_window.cpp  effects_window.h  micmix_core.cpp  micmix_core.h  plugin_main.cpp  resource.h  settings_window.cpp  settings_window.h  ui_shared.cpp  ui_shared.h  vst_audio_ipc.h  vst_host_main.cpp
tests/: config_store_tests.cpp
